# Blockdataapis

./: .gitignore  MANIFEST.in  README.md  base.py  pyproject.toml  requirements.txt
blockapiwrapper/: base.py
src/blockapiwrapper/: __init__.py  __main__.py  base.py
src/blockdataapis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test.py
